// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the SearchBar component with headingText matches the snapshot 1`] = `
<div
  className="sc-htpNat kgyyXF"
  role="search"
>
  <h2
    className="sc-ifAKCX hKUwhn"
  >
    Headingtext
  </h2>
  <form>
    <label
      className="sc-bwzfXH euRyYj"
      htmlFor="search-input"
    >
      <span
        className="screen-reader-text sc-bdVaJa bDWFJH"
      >
        Headingtext
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-bxivhb bsncyX"
      defaultValue=""
      id="search-input"
      name="search-input"
      onChange={[Function]}
      onSubmit={[Function]}
      spellCheck="false"
      type="text"
    />
  </form>
</div>
`;

exports[`the SearchBar component without headingText matches the snapshot 1`] = `
<div
  className="sc-htpNat kgyyXF"
  role="search"
>
  <h2
    className="sc-ifAKCX hKUwhn"
  >
    Search the Yoast knowledge base
  </h2>
  <form>
    <label
      className="sc-bwzfXH euRyYj"
      htmlFor="search-input"
    >
      <span
        className="screen-reader-text sc-bdVaJa bDWFJH"
      >
        Search the Yoast knowledge base
      </span>
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="sc-bxivhb bsncyX"
      defaultValue=""
      id="search-input"
      name="search-input"
      onChange={[Function]}
      onSubmit={[Function]}
      spellCheck="false"
      type="text"
    />
  </form>
</div>
`;
